--- a/zeleniKljucHakaton/ui/Partners/PartnersCollectionViewCell.xib
+++ b/zeleniKljucHakaton/ui/Partners/PartnersCollectionViewCell.xib
@@ -39,6 +39,9 @@
                                 <color key="tintColor" red="0.23296272749999999" green="0.52554482219999998" blue="0.65403217079999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="chevron.right.circle.fill" catalog="system"/>
+                                <connections>
+                                    <action selector="buttonPressed:" destination="gTV-IL-0wX" eventType="touchUpInside" id="Ul5-Oo-MuT"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
