--- a/zeleniKljucHakaton/ui/SuccessfulSentReport/SuccessfulReportViewController.xib
+++ b/zeleniKljucHakaton/ui/SuccessfulSentReport/SuccessfulReportViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SuccessfulReportViewController" customModule="zeleniKljucHakaton" customModuleProvider="target">
             <connections>
+                <outlet property="dateOfReport" destination="puh-Xk-khZ" id="Lha-2Q-b9I"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -30,15 +31,17 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Dd-uc-bbg">
-                    <rect key="frame" x="25" y="139" width="364" height="142.5"/>
-                    <string key="text">Vaša prijava je prosledjena zaduženoj instituciji. Lorem ipsum dolor sit amet, consec tetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.</string>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Dd-uc-bbg">
+                    <rect key="frame" x="25" y="139" width="364" height="162.5"/>
+                    <string key="text">Vaša prijava je uspesno prosledjena zaduženoj instituciji.
+Hvala Vamna pomoci da zajedno podignemo nivo ekološke kulture i svesti i  formiramo funkcionalan i i održiv sistem zaštite životne sredine.
+Zajedno do ekološki, čiste i zdrave životne sredine!</string>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.23296272749999999" green="0.52554482219999998" blue="0.65403217079999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="confirm" translatesAutoresizingMaskIntoConstraints="NO" id="huX-uP-fRr">
-                    <rect key="frame" x="35" y="331.5" width="344" height="250"/>
+                    <rect key="frame" x="35" y="351.5" width="344" height="250"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="250" id="w66-gr-DUg"/>
                     </constraints>
