--- a/zeleniKljucHakaton/ui/SelectCategory/CategoryTableViewCell.xib
+++ b/zeleniKljucHakaton/ui/SelectCategory/CategoryTableViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="75" id="KGk-i7-Jjw" customClass="CategoryTableViewCell" customModule="zeleniKljucHakaton" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="75" id="KGk-i7-Jjw" customClass="CategoryTableViewCell" customModule="zeleniKljucHakaton" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="351" height="75"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -101,6 +101,7 @@
                 </userDefinedRuntimeAttribute>
             </userDefinedRuntimeAttributes>
             <connections>
+                <outlet property="backgorundView" destination="QEp-B1-l0e" id="BgM-Vc-knL"/>
                 <outlet property="categoryItem" destination="rn2-lN-BCu" id="rlv-jE-wqF"/>
                 <outlet property="logoImage" destination="N9x-0c-6Ms" id="I10-sU-MTc"/>
             </connections>
