--- a/zeleniKljucHakaton/ui/Gallery/GalleryCell.xib
+++ b/zeleniKljucHakaton/ui/Gallery/GalleryCell.xib
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -19,7 +20,7 @@
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="confirm" translatesAutoresizingMaskIntoConstraints="NO" id="MPw-iS-bpW">
                         <rect key="frame" x="8" y="8" width="330" height="281"/>
-                        <color key="backgroundColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" systemColor="systemYellowColor"/>
                     </imageView>
                 </subviews>
             </view>
@@ -32,12 +33,15 @@
             </constraints>
             <size key="customSize" width="346" height="297"/>
             <connections>
-                <outlet property="picture" destination="MPw-iS-bpW" id="Nsq-1I-pZo"/>
+                <outlet property="picture" destination="MPw-iS-bpW" id="LT8-RS-Tsj"/>
             </connections>
             <point key="canvasLocation" x="367.69230769230768" y="108.41232227488152"/>
         </collectionViewCell>
     </objects>
     <resources>
         <image name="confirm" width="119" height="103.5"/>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
